[package]
name = "quorums"
version = "0.1.0"
edition = "2024"
description = "Rust implementation of Gorums gRPC quorum framework"
license = "MIT"
rust-version = "1.93.1"
authors = ["Brian Rogoff <brogoff@gmail.com>"]
repository = "https://github.com/bpr/quorums"
readme = "README.md"

keywords = ["gorums", "consensus", "rpc"]

[workspace]
members = [".", "quorums-build"]
resolver = "2"

[dependencies]
tonic = "0.13"
prost = "0.13"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
futures = "0.3"
dashmap = "6"
bytes = "1"
petgraph = "0.6"

[build-dependencies]
tonic-build = "0.13"
quorums-build = { version = "0.1.0", path = "quorums-build" }
